<resources>
    <string name="app_name">Relatórios de Rotas</string>
    <string name="continue_string">Continue</string>

    <string name="fullName">Full Name</string>
    <string name="email">email@email.com</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>

    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="recover_account">Recover account</string>
    <string name="logout">Log Out</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="description_logo">logo</string>
    <string name="bt_register">Register</string>
    <string name="bt_login">Login</string>

    <string name="register_hint_editText_new_User_nome">Nome de Usuário</string>
    <string name="description_img_new_user">img_new_user</string>
    <string name="description_img_login">img_login</string>
    <string name="title_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_header_title">Nome de Usuário</string>
    <string name="nav_header_subtitle">email@example.com</string>
    <string name="login">Login</string>

    <string-array name="valores_cidades_array">
            <item>R$ 0,00</item>
            <item>R$ 223,00</item>
            <item>R$ 263,00</item>
            <item>R$ 283,00</item>
            <item>R$ 313,00</item>
            <item>R$ 330,00</item>
         </string-array>


</resources>