<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_new_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/description_img_new_user"
            android:src="@drawable/ic_new_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Campo de Nome -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNome"
            style="@style/TextInputEditText_form"
            android:hint="@string/register_hint_editText_newUser_nome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_new_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNome"
                style="@style/TextInputEditText"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de E-mail -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/TextInputEditText_form"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutNome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/TextInputEditText"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de Senha -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/TextInputEditText_password"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/TextInputEditText"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botão de Cadastro -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            style="@style/form_buttons"
            android:text="@string/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



